2004-02-14  Richard Hult  <richard@imendio.com>

	* data/images/24_link_task.png:
	* data/images/Makefile.am:
	* data/ui/gantt-view.ui:
	* data/ui/task-view.ui:
	* src/planner-application.c:
	* src/planner-gantt-view.c:
	* src/planner-task-tree.c:
	* src/planner-task-view.c: Add menu item and toolbar button for
	Link tasks, patch from Lincoln Phipps.

2004-02-14  Richard Hult  <richard@imendio.com>

	* src/planner-window.c: (window_undo_state_changed_cb),
	(window_redo_state_changed_cb): Work around a bug, needs to be
	fixed later, see bug #134357.

	* autogen.sh: Check for gtkdocize and run it.

2004-02-10  Alvaro del Castillo  <acs@barrapunto.com>

	* libplanner/mrp-group.c 
	* src/planner-cmd-manager.c
	* src/planner-group-dialog.c
	Clean from a wrong commit

2004-02-10  Alvaro del Castillo  <acs@barrapunto.com>

	* po/es.po
	Use the same translation for manager (encargado) in all places
	* src/planner-group-dialog.c
	undo/redo for group default property
	implemented the free function for undo/redo commands

2004-02-08  Alvaro del Castillo  <acs@barrapunto.com>

	* libplanner/mrp-resource.c
	When a group is deleted the resource removes it if it is its group
	* src/planner-group-dialog.[ch]
	undo/redo work for adding, modifying and removing groups

2004-02-02  Alvaro del Castillo  <acs@barrapunto.com>

	* libplanner/mrp-resource.[ch]
	Added mrp_resource_clone method that returns a new cloned resource object
	* src/planner-resource-view.c
	Use mrp_resource_clone to store the object in the undo deletion command
	New internal function to convert a string into a GValue using resource
	properties

2004-02-01  Alvaro del Castillo  <acs@barrapunto.com>

	* libplanner/mrp-application.c
	* libplanner/mrp-application.h
	* libplanner/mrp-object.c
	* libplanner/mrp-private.h
	* libplanner/mrp-project.c
	final implementation for the new object id system
	* src/planner-resource-view.c
	first use of the new object id system

2004-01-30  Xavier Ordoquy  <xordoquy@wanadoo.fr>
